GNOME Bugzilla – Bug 690903
Incorrect interpretation of artist name data in Musicbrainz lookup
Last modified: 2013-06-19 21:03:11 UTC
Hi, I'm a Musicbrainz contributer. We recently got some reports from a Sound Juicer user that it was displaying incorrect track artists on some releases. It appears that the issue is due to Sound Juicer using the incorrect artist credit. Based on http://git.gnome.org/browse/sound-juicer/tree/libjuicer/sj-metadata-musicbrainz5.c#n337 it appears that you are currently using the Recording artist credit if present, then falling back to the Track artist credit. There are three places where an artist credit can be present - at the Release level (top level), Track level, and Recording level. The recommended usage for applications like Sound Juicer is to prefer the Track level if present. If there is no artist credit at the track level, then the Release artist credit should be used (This is common on single-artist releases). The Recording artist credit should not be used.
Hey Calvin, thanks a lot for the recommendations, took me a while to look at this :( Sound Juicer is also favouring recording title over track title, is that the recommended way, or should we just ignore the recording title as well?
In this case, you should be using the track title only, yes. In the Musicbrainz Picard tagging software, we provide an option to allow users to switch to the recording titles+artist credits, but that's something that's really limited to certain classes of power users (particularly when dealing with classical music), and I don't think it makes sense to be an exposed config option in Sound Juicer.
Created attachment 240857 [details] [review] mb5: Ignore artist credits and track title from recordings Quoting Calvin Walton (CW) and myself (CF) from https://bugzilla.gnome.org/show_bug.cgi?id=690903: CW: The recommended usage for applica tions like Sound Juicer is to prefer the Track level if present. If there is no artist credit at the track level, then the Release artist credit should be used (This is common on single-artist releases). The Recording artist credit should not be used. CF: Sound Juicer is also favouring recording title over track title, is that the recommended way, or should we just ignore the recording title as well? CW: In this case, you should be using the track title only, yes.
(In reply to comment #2) > In this case, you should be using the track title only, yes. There are various releases with only recording title and no track title, so I guess "in this case" means "when both are set"? If only one is set, then we want to use the one that is set ;) Release with no track title is http://musicbrainz.org/ws/2/release/c2d6aeb9-8c72-3bd5-91c6-ae5f62ba3b3c?inc=recordings+artists for example.
(In reply to comment #0) > There are three places where an artist credit can be present - at the Release > level (top level), Track level, and Recording level. > > The recommended usage for applications like Sound Juicer is to prefer the Track > level if present. If there is no artist credit at the track level, then the > Release artist credit should be used (This is common on single-artist > releases). > > The Recording artist credit should not be used. On multi-artist albums, this means setting the artist name as "Various Artists", correct? Looking at http://musicbrainz.org/ws/2/release/dfd193e9-2e66-48e6-bc71-10c5f3aae270?inc=recordings+artists and http://musicbrainz.org/ws/2/recording/3be49278-3809-4a5a-8012-88be1c97dde6?inc=artists there is no track artist, the release artist is "Various artists", and the recording artist gives the name of the artist who recorded that specific track.
In your examples, you forgot to include "inc=artist-credits" which you need in order to get the as-credited artists to be returned. Once you do that, you will get artist(s) back for every track.
Ah, even after double-checking http://musicbrainz.org/ws/2/release/dfd193e9-2e66-48e6-bc71-10c5f3aae270?inc=artist-credits%2Blabels%2Bdiscids%2Brecordings I can still see the issue you're talking about; there's no track-level artist credit, but there is a recording-level artist credits. I was under the impression that the track-level credit would only be dropped in the case where it was identical to the release-level, but that seems to not properly hold on this various artists release. I'll have to talk to one of the server developers to ensure that this is not a bug; I'll get back to you shortly.
OK, after talking with a developer, I've gotten this clarified. On the XML webservice, the track level artist credit may be omitted in the case where the recording level artist credit is the same. I think this is the only case where they may be omitted. The fallback order for the sound-juicer track artist should be as follows: - Use the track/artist-credit if present - Otherwise use the recording/artist-credit if present - As a final fallback, use the release/artist-credit The fallback order for the sound-juicer track name should be as follows: - Use the track/title if present - Otherwise use the recording/title These rules should be future-proof, and give correct results. Sorry for the confusion. We also have a new json version of the webservice available, e.g. http://musicbrainz.org/ws/2/release/dfd193e9-2e66-48e6-bc71-10c5f3aae270?inc=artist-credits%2Blabels%2Brecordings&fmt=json Because we found the redundant info dropping in the XML webservice so confusing, the JSON version was changed. It *always* includes the track level artist-credits and title, even if they're the same as the recording artist credit/title.
Created attachment 241107 [details] [review] mb5: Ignore artist credits and track title from recordings Quoting Calvin Walton from https://bugzilla.gnome.org/show_bug.cgi?id=690903#c8: "The fallback order for the sound-juicer track artist should be as follows: - Use the track/artist-credit if present - Otherwise use the recording/artist-credit if present - As a final fallback, use the release/artist-credit The fallback order for the sound-juicer track name should be as follows: - Use the track/title if present - Otherwise use the recording/title"
Attachment 241107 [details] pushed as ba6f391 - mb5: Ignore artist credits and track title from recordings