mb5: Ignore artist credits and track title from recordings

Quoting Calvin Walton from
https://bugzilla.gnome.org/show_bug.cgi?id=690903#c8:

"The fallback order for the sound-juicer track artist should be as follows:
- Use the track/artist-credit if present
- Otherwise use the recording/artist-credit if present
- As a final fallback, use the release/artist-credit

The fallback order for the sound-juicer track name should be as follows:
- Use the track/title if present
- Otherwise use the recording/title"